--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@rails/ujs": "^6.0.2-1",
     "@rails/webpacker": "^4.0.2",
     "algoliasearch": "^3.24.9",
     "autoprefixer": "^7.1.2",
